fix typo: change all instances of Debsoc to DebSoc

--- a/sections/01-introduction.tex
+++ b/sections/01-introduction.tex
@@ -4,17 +4,17 @@
 \begin{enumerate}
     \item The name of the Society shall be the UNSW Debating Society.
     \begin{enumerate}
-        \item This may be shortened to Debsoc.
+        \item This may be shortened to DebSoc.
     \end{enumerate}
     \item This Constitution shall commence on the day it is approved by an Annual or Extraordinary General Meeting.
-    \item This Constitution supersedes any previous Debsoc Constitution.
+    \item This Constitution supersedes any previous DebSoc Constitution.
     \item This Constitution is subject to Arc and UNSW policy.
     \begin{enumerate}
-        \item Where it contradicts with Arc and/or UNSW policy, Debsoc will follow Arc and UNSW policy.
+        \item Where it contradicts with Arc and/or UNSW policy, DebSoc will follow Arc and UNSW policy.
     \end{enumerate}
-    \item Debsoc shall have the authority to gain, maintain and end affiliation with any relevant organisation.
-    \item Debsoc shall be affiliated with Arc.
-    \item The aims and objectives of Debsoc are: \label{debsoc_aims}
+    \item DebSoc shall have the authority to gain, maintain and end affiliation with any relevant organisation.
+    \item DebSoc shall be affiliated with Arc.
+    \item The aims and objectives of DebSoc are: \label{debsoc_aims}
     \begin{enumerate}
         \item To promote debating at UNSW and to use debating as a way to contribute to UNSW cultural life.
         \item To encourage widespread membership and involvement in debating.
@@ -31,7 +31,7 @@
             \item Where an individual trustee with a potential conflict of interest fails to recuse themselves, they may be excluded by a simple majority vote with the other three trustees including the Vice President (Internals).
         \end{enumerate}
         \item The panel must have at least three members. If such a panel cannot be constructed, an EGM will be called to resolve this at the soonest possible time meeting all the requirements for advance notice.
-        \item The decision must be distributed in the next Debsoc newsletter and on the Debsoc website.
+        \item The decision must be distributed in the next DebSoc newsletter and on the DebSoc website.
     \end{enumerate}
     \item In all matters not specifically dealt with herein, the procedures set out in the latest edition of Guide for Meetings and Organisations by N.E.R. Renton shall apply.
     \item The assets and income of the organisation shall be applied solely in furtherance of its above-mentioned objects and no portion shall be distributed directly or indirectly to the members of the organisation except as bona fide compensation for services rendered or expenses incurred on behalf of the organisation.
