--- a/sections/03-members.tex
+++ b/sections/03-members.tex
@@ -4,10 +4,10 @@
 \begin{enumerate}
 \item Full membership of the Club shall be open to all UNSW students, and they shall be required to pay an annual Club membership fee set by the Club Executive, and complete a membership form.
 \item Associate membership shall be open to all persons who are not UNSW students, subject to payment of a membership fee to be determined by the Executive each year and they complete a membership form prepared by the Club Executive. Associate members function as observers within the society. They cannot vote or contribute to quorum at annual or extraordinary general meetings though they may attend executive meetings.
-\item The duration of a person’s membership shall be until Debsoc’s next Annual General Meeting after they become a member, or until the end of week one in session one of the university year after they have become a member, whichever is the later.
-\item The Executive may communicate a cautionary message to a member who has acted to the detriment of Debsoc.
-\item Contact details for members of Debsoc are to remain with the Executive and Arc to have sole access. Contact details are not to be given or sold to any other person.
-\item Debsoc shall comply with anti-discrimination legislation in all of its activities or procedures, including the granting of society membership.
+\item The duration of a person’s membership shall be until DebSoc’s next Annual General Meeting after they become a member, or until the end of week one in session one of the university year after they have become a member, whichever is the later.
+\item The Executive may communicate a cautionary message to a member who has acted to the detriment of DebSoc.
+\item Contact details for members of DebSoc are to remain with the Executive and Arc to have sole access. Contact details are not to be given or sold to any other person.
+\item DebSoc shall comply with anti-discrimination legislation in all of its activities or procedures, including the granting of society membership.
 \item An ordinary or associate member may have their membership terminated after the following procedure is followed:
   \begin{enumerate}
   \item A motion is carried by the Executive, or the Executive is petitioned by twenty (20) members to instigate impeachment proceedings;
