--- a/sections/04-executive.tex
+++ b/sections/04-executive.tex
@@ -22,18 +22,18 @@
   \end{enumerate}
 \item All positions, with the exception of Immediate Past President and First Year Representative, shall be elected according to the procedure in section 8.
   \begin{enumerate}
-  \item The First Year Representative shall be elected from first year members of Debsoc at an Extraordinary General Meeting as soon as practicable after Easters.
+  \item The First Year Representative shall be elected from first year members of DebSoc at an Extraordinary General Meeting as soon as practicable after Easters.
     \begin{enumerate}
-    \item The First Year Representative must be an ordinary member of Debsoc in their first year of membership of Debsoc.
-    \item Only members in their first year of membership of Debsoc are permitted to vote for the First Year Representative.
+    \item The First Year Representative must be an ordinary member of DebSoc in their first year of membership of DebSoc.
+    \item Only members in their first year of membership of DebSoc are permitted to vote for the First Year Representative.
     \end{enumerate}
   \item The WGM Officer must be non cis-male.
     \begin{enumerate}
-    \item Only WGM members of Debsoc are permitted to vote for the WGM Officer.
+    \item Only WGM members of DebSoc are permitted to vote for the WGM Officer.
     \end{enumerate}
   \item The POC Officer must be a person of colour.
     \begin{enumerate}
-    \item Only POC members of Debsoc are permitted to vote for the POC Officer.
+    \item Only POC members of DebSoc are permitted to vote for the POC Officer.
     \end{enumerate}
   \item The IPP shall be the President of the society from immediately previous year. \label{ipp_desc}
   \end{enumerate}
@@ -65,7 +65,7 @@
   \end{enumerate}
 \item Casual vacancies may be filled by either:
   \begin{enumerate}
-  \item Temporarily co-opting a member of Debsoc to a position by resolution of the Executive - such a person shall have no voting power and shall serve for a period of no longer than one month, whereby their position will be filled in accordance with \bref{vacancy_egm}; or
+  \item Temporarily co-opting a member of DebSoc to a position by resolution of the Executive - such a person shall have no voting power and shall serve for a period of no longer than one month, whereby their position will be filled in accordance with \bref{vacancy_egm}; or
   \item Electing someone to the position at an Extraordinary General Meeting. \label{vacancy_egm}
   \end{enumerate}
 \item A person who causes a casual vacancy may be subject to punitive measures determined by the Trustees including but not limited to:
@@ -76,10 +76,10 @@
   \end{enumerate}
 \item The roles of the executive are:
   \begin{enumerate}
-  \item To further the objects of Debsoc;
-  \item To formulate general policy for the furtherance of the objects of Debsoc;
-  \item To conduct the day to day running of Debsoc; and
-  \item To oversee the prudent financial management of Debsoc.
+  \item To further the objects of DebSoc;
+  \item To formulate general policy for the furtherance of the objects of DebSoc;
+  \item To conduct the day to day running of DebSoc; and
+  \item To oversee the prudent financial management of DebSoc.
   \end{enumerate}
 \item The Executive shall meet:
   \begin{enumerate}
@@ -116,13 +116,13 @@
 \item The Executive:
   \begin{enumerate}
   \item May delegate its authority, except for this power of delegation (unless explicitly resolved). The Executive may create or revoke any delegations by resolution.
-  \item The Executive is at all times bound by decisions of an Annual General Meeting or Extraordinary General Meeting of Debsoc.
+  \item The Executive is at all times bound by decisions of an Annual General Meeting or Extraordinary General Meeting of DebSoc.
   \end{enumerate}
 \item With the exception of the positions of Co-Equity Officer (male), Co-Equity Officer (female), and Immediate Past President, no person may hold two of the positions outlined in section \bref{exec_positions}.
-\item Debsoc must not endorse any candidate or group of candidates in any election, except where a motion to do so has been passed by a two-thirds majority of the Executive. \label{exec_endorsements}
+\item DebSoc must not endorse any candidate or group of candidates in any election, except where a motion to do so has been passed by a two-thirds majority of the Executive. \label{exec_endorsements}
   \begin{enumerate}
   \item Any motion to endorse a candidate or group of candidates must specify the reasons for endorsing them, and those reasons must be noted in the minutes.
-  \item For the purposes of section \bref{exec_endorsements}, endorsing a candidate includes any act of publicising or expressing support for a candidate through any medium associated with Debsoc.
+  \item For the purposes of section \bref{exec_endorsements}, endorsing a candidate includes any act of publicising or expressing support for a candidate through any medium associated with DebSoc.
   \item Endorsing a candidate does not include any actions taken by members of the Executive in their personal capacity.
   \end{enumerate}
 \item The following provisions apply if a member of the Executive has a conflict of interest: \label{coi_provisions}
@@ -150,5 +150,5 @@
     \item Preventing the member of the Executive with a conflict of interest from voting on a motion related to the matter which is the subject of the conflict of interest.
     \end{enumerate}
   \end{enumerate}
-\item Constitutional disputes will be settled by a panel of the trustees. If one of the members has a conflict of interest, then they will be excluded. The panel must have at least three members. The decision must be distributed in the next Debsoc newsletter and on the Debsoc website. If such a panel cannot be constructed, an EGM will be called to resolve this at the soonest possible time meeting all the requirements for advance notice.
+\item Constitutional disputes will be settled by a panel of the trustees. If one of the members has a conflict of interest, then they will be excluded. The panel must have at least three members. The decision must be distributed in the next DebSoc newsletter and on the DebSoc website. If such a panel cannot be constructed, an EGM will be called to resolve this at the soonest possible time meeting all the requirements for advance notice.
 \end{enumerate}
