--- a/sections/05-executive-roles.tex
+++ b/sections/05-executive-roles.tex
@@ -9,12 +9,12 @@
     \end{enumerate}
   \item The roles of the President are:
     \begin{enumerate}
-    \item To oversee the general day to day running of Debsoc;
+    \item To oversee the general day to day running of DebSoc;
     \item To share news of the society with all members via the regular publication of a newsletter;
     \item To chair all meetings;
     \item To ensure that the Executive meets at least once per month for a minimum of 10 months per year;
-    \item To represent Debsoc to external bodies, except where that duty falls upon the Vice President (Externals); to speak for Debsoc at public occasions; and
-    \item To be ultimately responsible for all activities of Debsoc.
+    \item To represent DebSoc to external bodies, except where that duty falls upon the Vice President (Externals); to speak for DebSoc at public occasions; and
+    \item To be ultimately responsible for all activities of DebSoc.
     \end{enumerate}
   \item The President cannot also hold the position of Treasurer.
   \end{enumerate}
@@ -28,11 +28,11 @@
     \end{enumerate}
   \item The roles of the Vice President (Income/Treasurer) are:
     \begin{enumerate}
-    \item To oversee the prudent financial management of Debsoc including but not limited to section \bref{finances_section};
-    \item To maintain Debsoc’s accounts;
-    \item To organise the budget of Debsoc to be approved by the Executive;
-    \item To solicit sponsorship for Debsoc from within UNSW and from sponsors;
-    \item To ensure good relations are developed and maintained between Debsoc and all sponsors;
+    \item To oversee the prudent financial management of DebSoc including but not limited to section \bref{finances_section};
+    \item To maintain DebSoc’s accounts;
+    \item To organise the budget of DebSoc to be approved by the Executive;
+    \item To solicit sponsorship for DebSoc from within UNSW and from sponsors;
+    \item To ensure good relations are developed and maintained between DebSoc and all sponsors;
     \item To set up Schools Debating Days or Debating Workshops to raise revenue.
       \begin{enumerate}
       \item If a Schools Debating Day occurs the Vice-President may appoint a Schools Debating Day Director(s).
@@ -47,11 +47,11 @@
   \begin{enumerate}
   \item The roles of the Vice President (Externals) are:
     \begin{enumerate}
-    \item To maintain Debsoc’s affiliations with Intervarsity Debating organisations;
-    \item To organise selections for teams and adjudicators for Debsoc to send to Intervarsity tournaments;
-    \item To ensure that members of Debsoc receive information and training as to the style of debate used in Intervarsity tournaments;
+    \item To maintain DebSoc’s affiliations with Intervarsity Debating organisations;
+    \item To organise selections for teams and adjudicators for DebSoc to send to Intervarsity tournaments;
+    \item To ensure that members of DebSoc receive information and training as to the style of debate used in Intervarsity tournaments;
     \item To organise transportation and accommodation in regards to Intervarsity tournaments;
-    \item To represent Debsoc on Intervarsity Debating Councils, except WGM Council if the Coordinator is not non cis-male; and to ensure Debsoc is represented through the Australian Representative at the Worlds Intervarsity Debating Council.
+    \item To represent DebSoc on Intervarsity Debating Councils, except WGM Council if the Coordinator is not non cis-male; and to ensure DebSoc is represented through the Australian Representative at the Worlds Intervarsity Debating Council.
     \end{enumerate}
   \end{enumerate}
 
@@ -70,12 +70,12 @@
   \begin{enumerate}
   \item The roles of the Vice President (Competitions) are:
     \begin{enumerate}
-    \item To convene UNSW Debsoc’s intervarsity tournaments;
+    \item To convene UNSW DebSoc’s intervarsity tournaments;
     \item To organise social events associated with minis;
     \item To appoint tab directors and organising committees for minis, where necessary and in consultation with the Executive;
     \item To appoint and solicit CAs for minis, in consultation with the Executive.
     \end{enumerate}
-  \item The minis organised by UNSW Debsoc shall be, unless decided otherwise by the Executive:
+  \item The minis organised by UNSW DebSoc shall be, unless decided otherwise by the Executive:
     \begin{enumerate}
     \item UNSW Pre-Easters;
     \item UNSW Pre-Australs;
@@ -93,11 +93,11 @@
     \item To keep accurate minutes of all meetings;
     \item To organise agendas and notification of all meetings;
     \item To ensure all policies and minutes are available for viewing by members on request;
-    \item To maintain Debsoc’s affiliation with Arc;
+    \item To maintain DebSoc’s affiliation with Arc;
     \item To claim all funding and support available from Arc;
     \item To attend all Arc meetings;
     \item To be responsible for compliance with Arc requirements;
-    \item To ensure the society is compliant with the Debsoc Constitution.
+    \item To ensure the society is compliant with the DebSoc Constitution.
     \end{enumerate}
   \end{enumerate}
 
@@ -105,10 +105,10 @@
   \begin{enumerate}
   \item The roles of the Events \& Media Director are:
     \begin{enumerate}
-    \item To organise Debsoc’s membership recruitment drive during O-week and at other times as decided from time to time by the Executive;
-    \item To encourage an open and social atmosphere within Debsoc;
+    \item To organise DebSoc’s membership recruitment drive during O-week and at other times as decided from time to time by the Executive;
+    \item To encourage an open and social atmosphere within DebSoc;
     \item To organise social events for members;
-    \item To maintain Debsoc’s social media presence.
+    \item To maintain DebSoc’s social media presence.
     \end{enumerate}
   \end{enumerate}
 
@@ -116,13 +116,13 @@
   \begin{enumerate}
   \item The roles of the WGM Officer are:
     \begin{enumerate}
-    \item To encourage the participation of non cis-men within Debsoc;
+    \item To encourage the participation of non cis-men within DebSoc;
     \item To organise practice debates and social events for Women \& Gender Minorities, at least once per year;
-    \item To make representations to the Executive on any matter which may adversely affect WGM in Debsoc;
+    \item To make representations to the Executive on any matter which may adversely affect WGM in DebSoc;
     \item To ensure that affirmative action requirements of Intervarsity tournaments are complied with; and
-    \item To represent Debsoc at AIDA WGM Council;
-    \item To oversee the culture within Debsoc to ensure a supportive and welcoming environment exists for all members;
-    \item To implement strategies aimed at ensuring that the culture within Debsoc does not alienate WGM members;
+    \item To represent DebSoc at AIDA WGM Council;
+    \item To oversee the culture within DebSoc to ensure a supportive and welcoming environment exists for all members;
+    \item To implement strategies aimed at ensuring that the culture within DebSoc does not alienate WGM members;
     \item To take an active role in creating development opportunities for WGM debaters within the society.
     \end{enumerate}
   \end{enumerate}
@@ -143,7 +143,7 @@
   \begin{enumerate}
   \item The roles of the First Year Representative are:
     \begin{enumerate}
-    \item To ensure the participation and enjoyment of first year and new members of Debsoc;
+    \item To ensure the participation and enjoyment of first year and new members of DebSoc;
     \item To make representations to the Executive on matters concerning the participation of first year and new members in internal or external competitions; and
     \item To act as an executive member without a portfolio.
     \end{enumerate}
@@ -154,7 +154,7 @@
   \item The Immediate Past President shall serve as an ex-officio member of the Executive unless they are not a current UNSW student or Arc member, in accordance with \bref{ipp_desc}.
   \item The roles of the Immediate Past President are:
     \begin{enumerate}
-    \item To advise the Executive on the past practice of Debsoc;
+    \item To advise the Executive on the past practice of DebSoc;
     \item To assist in the solicitation of selectors for Intervarsity tournaments; and
     \item To assist the President where possible;
     \item To maintain an alumni database.
@@ -187,13 +187,13 @@
   \begin{enumerate}
   \item The roles of the POC Officer are:
     \begin{enumerate}
-    \item To encourage the participation of POC within Debsoc;
+    \item To encourage the participation of POC within DebSoc;
     \item To organise practice debates and social events for POC;
-    \item To make representations to the Executive on any matter which may adversely affect POC in Debsoc;
+    \item To make representations to the Executive on any matter which may adversely affect POC in DebSoc;
     \item To ensure that affirmative action requirements of Intervarsity tournaments are complied with; and
-    \item To represent Debsoc at ADC and AIDA POC Council;
-    \item To oversee the culture within Debsoc to ensure a supportive and welcoming environment exists for all members;
-    \item To implement strategies aimed at ensuring that the culture within Debsoc does not alienate POC members;
+    \item To represent DebSoc at ADC and AIDA POC Council;
+    \item To oversee the culture within DebSoc to ensure a supportive and welcoming environment exists for all members;
+    \item To implement strategies aimed at ensuring that the culture within DebSoc does not alienate POC members;
     \item To take an active role in creating development opportunities for POC debaters within the society.
     \end{enumerate}
   \end{enumerate}
