--- a/sections/07-subsidies.tex
+++ b/sections/07-subsidies.tex
@@ -2,7 +2,7 @@
 \section{Subsidies}
 
 \begin{enumerate}
-\item To further its objects, Debsoc may give a subsidy to those members participating in a given intervarsity tournament for part or all of the cost of registration and transportation to the tournament.
+\item To further its objects, DebSoc may give a subsidy to those members participating in a given intervarsity tournament for part or all of the cost of registration and transportation to the tournament.
 \item The Executive in a given year may decide:
   \begin{enumerate}
   \item To grant subsidies to participants in some tournaments but not others;
