--- a/sections/08-meetings.tex
+++ b/sections/08-meetings.tex
@@ -5,7 +5,7 @@
 \item Annual General Meetings
   \begin{enumerate}
   \item An Annual General Meeting must be held once per year to report on the year and elect the Executive for the next year.
-  \item An Annual General Meeting must be called with 14 days’ notice by email to the Members of Debsoc, and shall be held during University session. \label{agm_notice_proc}
+  \item An Annual General Meeting must be called with 14 days’ notice by email to the Members of DebSoc, and shall be held during University session. \label{agm_notice_proc}
   \item At an Annual General Meeting, reports must be received from the President and Treasurer, full financial reports must be received and full elections (except for First Year Representative) for a new Executive must be held.
   \item Any constitutional amendments may be voted on only if 7 days notice is given.
   \item In order to be eligible to vote in an Annual General Meeting, a member must already be a member of the society, as recorded by SpArc, before notice of the election is given.
@@ -45,8 +45,8 @@
 \item Extraordinary General Meetings \label{egm_procedure}
   \begin{enumerate}
   \item An Extraordinary General Meeting may be held if the Executive sees fit, or if petitioned under this clause.
-  \item An Extraordinary General Meeting must be called with fourteen (14) days notice by email to the Members of Debsoc.
-  \item An Extraordinary General Meeting will be held if petitioned by 15 members of Debsoc or half the club's membership, whichever is the lesser. The petition must be lodged with the Executive, who will call the meeting for within 21 academic days, but not within fourteen (14) academic days.
+  \item An Extraordinary General Meeting must be called with fourteen (14) days notice by email to the Members of DebSoc.
+  \item An Extraordinary General Meeting will be held if petitioned by 15 members of DebSoc or half the club's membership, whichever is the lesser. The petition must be lodged with the Executive, who will call the meeting for within 21 academic days, but not within fourteen (14) academic days.
   \item If a motion of no confidence is passed at an Extraordinary General Meeting to an Executive position, a casual vacancy shall occur and will be voted upon immediately according to this Constitution.
   \item Any constitutional amendments may be voted on only if included in the notice of the meeting.
   \end{enumerate}
@@ -63,7 +63,7 @@
   \item They allow for at least 1 scrutineer per candidate, (who cannot be the candidate themselves) to be present for the counting of votes, if this is held in person, or for that person to be provided access to the voting sheets if the election was held online.
   \end{enumerate}
 
-\item Quorum for Annual General Meetings and Extraordinary General Meetings is 15 members of Debsoc or half of Debsoc's membership, whichever is the lesser.
+\item Quorum for Annual General Meetings and Extraordinary General Meetings is 15 members of DebSoc or half of DebSoc's membership, whichever is the lesser.
   \begin{enumerate}
   \item Executive members do not count for the purpose of Quorum.
   \end{enumerate}
