--- a/sections/10-co-equity-officers.tex
+++ b/sections/10-co-equity-officers.tex
@@ -4,10 +4,10 @@
 \begin{enumerate}
 \item The roles of the Co-Equity Officers are:
   \begin{enumerate}
-  \item To ensure that society members in general, and in particular contingents who attend external tournaments, are briefed on the Equity Policy as contained in Appendix A of the DebSoc constitution as well as any relevant Code of Conduct of an external competition and are aware that any allegation of misconduct will be treated very seriously by Debsoc.
-  \item To ensure that society members in general, and in particular contingents who attend external tournaments, are briefed on the nature of sexual harassment and are aware that any allegation of sexual harassment will be treated very seriously by Debsoc.
-  \item To confidentially administer Debsoc’s system of recording and actioning conflicts.
-  \item To regularly assess the environment of Debsoc as it relates to the comfort of non cis-male members and minority groups and first year and new members.
-  \item To be visible Executive members who can be approached by any member of Debsoc who has concerns about issues which disproportionately affect non cis-men or equity issues, which may include sexual harassment, discrimination, or any other offensive behaviours.
+  \item To ensure that society members in general, and in particular contingents who attend external tournaments, are briefed on the Equity Policy as contained in Appendix A of the DebSoc constitution as well as any relevant Code of Conduct of an external competition and are aware that any allegation of misconduct will be treated very seriously by DebSoc.
+  \item To ensure that society members in general, and in particular contingents who attend external tournaments, are briefed on the nature of sexual harassment and are aware that any allegation of sexual harassment will be treated very seriously by DebSoc.
+  \item To confidentially administer DebSoc’s system of recording and actioning conflicts.
+  \item To regularly assess the environment of DebSoc as it relates to the comfort of non cis-male members and minority groups and first year and new members.
+  \item To be visible Executive members who can be approached by any member of DebSoc who has concerns about issues which disproportionately affect non cis-men or equity issues, which may include sexual harassment, discrimination, or any other offensive behaviours.
   \end{enumerate}
 \end{enumerate}
