--- a/sections/12-dissolution.tex
+++ b/sections/12-dissolution.tex
@@ -15,6 +15,6 @@
   \item A vote is taken and the motion to dissolve lapses if opposed by 15 or more members of the club;
   \item If the motion to dissolve is carried, the most recent Members must be notified within 5 days.
   \end{enumerate}
-\item The dissolution of Debsoc will also start to occur if the club has been financially and administratively inactive for a period of 18 months.
-\item On the dissolution of Debsoc, Debsoc is not to distribute assets to members. All assets are to be distributed to an organisation with similar goals or objectives that also prohibits the distribution of assets to members. This organisation may be nominated at the dissolution meeting of Debsoc. If no other legitimate club or organisation is nominated, Arc will begin procedures to recover any property, monies or records belonging to Debsoc which it perceives would be useful to other Arc-affiliated clubs.
+\item The dissolution of DebSoc will also start to occur if the club has been financially and administratively inactive for a period of 18 months.
+\item On the dissolution of DebSoc, DebSoc is not to distribute assets to members. All assets are to be distributed to an organisation with similar goals or objectives that also prohibits the distribution of assets to members. This organisation may be nominated at the dissolution meeting of DebSoc. If no other legitimate club or organisation is nominated, Arc will begin procedures to recover any property, monies or records belonging to DebSoc which it perceives would be useful to other Arc-affiliated clubs.
 \end{enumerate}
