--- a/sections/appendix-a-equity-policy.tex
+++ b/sections/appendix-a-equity-policy.tex
@@ -5,7 +5,7 @@
 \begin{enumerate}
 \item Aim of the Equity Officers
   \begin{enumerate}
-  \item The aim of this equity policy is that all members of the UNSW Debsoc should at all times be treated with respect and free from discrimination, harassment and unsafe behaviour.
+  \item The aim of this equity policy is that all members of the UNSW DebSoc should at all times be treated with respect and free from discrimination, harassment and unsafe behaviour.
   \end{enumerate}
 
 \item Application
@@ -49,7 +49,7 @@
     \begin{enumerate}
     \item Contacting or speaking with one of the Co-Equity Officers;
     \item Emailing the Co-Equity Officers at \\unswdebsocequity@gmail.com; or
-    \item Submitting a complaint anonymously via an online form that will be made available at tournaments, on social media and on the UNSW Debsoc website. However punitive action against the alleged offender will not be taken where a complaint has been received anonymously.
+    \item Submitting a complaint anonymously via an online form that will be made available at tournaments, on social media and on the UNSW DebSoc website. However punitive action against the alleged offender will not be taken where a complaint has been received anonymously.
     \end{enumerate}
   \item After an equity complaint has been raised, the Co-Equity Officers may take action including (but not limited to):
     \begin{enumerate}
@@ -66,7 +66,7 @@
     \item Restricting from trialling for or representing the society at tournaments.
     \end{enumerate}
   \item The alleged offender must be informed of the allegations against them and given the opportunity to respond before punitive action is taken (except where the Co-Equity Officers believe that it is necessary to involve relevant authorities).
-  \item Debsoc and the Co-Equity Officers are not bound by the rules of procedural fairness where adherence to those rules would endanger the physical or psychological safety of any person: \label{procedural_fairness}
+  \item DebSoc and the Co-Equity Officers are not bound by the rules of procedural fairness where adherence to those rules would endanger the physical or psychological safety of any person: \label{procedural_fairness}
     \begin{enumerate}
     \item Where section \bref{procedural_fairness} applies, the rules of procedural fairness must be adhered to, but only to the extent that adherence does not endanger the physical or psychological safety of any person.
     \end{enumerate}
